--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.1.4", features = ["derive"] }
 clap_complete = "4.1.1"
-muzzman-daemon = "0.0.7"
-serde_json = "1.0.91"
+muzzman-daemon = {path = "../daemon"}
+# muzzman-daemon = "0.0.7"
+serde_json = "1"
